// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridItem should render 1`] = `
<div
  className="root"
  onClick={[Function]}
>
  <span>
     
  </span>
</div>
`;

exports[`GridItem should render CROSS 1`] = `
<div
  className="root"
  onClick={[Function]}
>
  <span />
</div>
`;

exports[`GridItem should render NAUGHT 1`] = `
<div
  className="root"
  onClick={[Function]}
>
  <span />
</div>
`;
